Remove Boolean constructor call