@@ -55,7 +55,7 @@ public class ASTOrNode extends SimpleNode
     public Object value(InternalContextAdapter context )
         throws MethodInvocationException
     {
-        return new Boolean( evaluate( context ) );
+        return Boolean.valueOf(evaluate(context));
     }
 
     /**
